<resources>
    <string name="app_name">GenEdCatalog</string>
    <string name="Main_List_title">Welcome to Course Catalog</string>
    <string name="Filter_Options">Filter Options: </string>
    <string name="action_settings">Settings</string>
    <string name="Course_banner">Avaliable Courses are: </string>
    <string name="Term_banner">Spring 2020</string>
    <string-array name="Course_Names">
        <item>All</item>
        <item>ACP - Advanced Composition</item>
        <item>CS - Cultural Studies</item>
            <item>  NW - Non-Western Culture(s)</item>
            <item>  US - US Minority Cultures</item>
            <item>  WCC - Western/Comparative Culture(s)</item>
        <item>HUM - Humanities and the Arts</item>
            <item>  HP - Historical and Philosophical Perspectives</item>
            <item>  LA - Literature and the Arts</item>
        <item>NAT - Natural Sciences and Technology</item>
            <item>  LS - Life Sciences</item>
            <item>  PS - Physical Sciences</item>
        <item>QR - Quantitative Reasoning</item>
            <item>  QR1 - Quantitative Reasoning I</item>
            <item>  QR2 - Quantitative Reasoning II</item>
        <item>SBS - Social and Behavioral Sciences</item>
            <item>  BSC - Behavioral Sciences</item>
            <item>  SS - Social Sciences</item>
    </string-array>
    <string-array name="CourseTypes">
        <item>ACP</item>
        <item>CS</item>
        <item>NW</item>
        <item>US</item>
        <item>WCC</item>
        <item>HUM</item>
        <item>HP</item>
        <item>LA</item>
        <item>NAT</item>
        <item>LS</item>
        <item>PS</item>
        <item>QR</item>
        <item>QR1</item>
        <item>QR2</item>
        <item>SBS</item>
        <item>BSC</item>
        <item>SS</item>
    </string-array>
    <string-array name="CourseSubjectCode">
        <item>AAS</item>
        <item>ABE</item>
        <item>ACCY</item>
        <item>ACE</item>
        <item>ACES</item>
        <item>ADV</item>
        <item>AE</item>
        <item>AFAS</item>
        <item>AFRO</item>
        <item>AFST</item>
        <item>AGCM</item>
        <item>AGED</item>
        <item>AHS</item>
        <item>AIS</item>
        <item>ALEC</item>
        <item>ANSC</item>
        <item>ANTH</item>
        <item>ARAB</item>
        <item>ARCH</item>
        <item>ART</item>
        <item>ARTD</item>
        <item>ARTE</item>
        <item>ARTF</item>
        <item>ARTH</item>
        <item>ARTS</item>
        <item>ASRM</item>
        <item>ASST</item>
        <item>ASTR</item>
        <item>ATMS</item>
        <item>BADM</item>
        <item>BCOG</item>
        <item>BCS</item>
        <item>BIOC</item>
        <item>BIOE</item>
        <item>BIOL</item>
        <item>BIOP</item>
        <item>BTW</item>
        <item>BUS</item>
        <item>CAS</item>
        <item>CB</item>
        <item>CDB</item>
        <item>CEE</item>
        <item>CHBE</item>
        <item>CHEM</item>
        <item>CHIN</item>
        <item>CHLH</item>
        <item>CHP</item>
        <item>CI</item>
        <item>CIC</item>
        <item>CLCV</item>
        <item>CMN</item>
        <item>CPSC</item>
        <item>CS</item>
        <item>CSE</item>
        <item>CW</item>
        <item>CWL</item>
        <item>CZCH</item>
        <item>DANC</item>
        <item>EALC</item>
        <item>ECE</item>
        <item>ECON</item>
        <item>EDPR</item>
        <item>EDUC</item>
        <item>EIL</item>
        <item>ENG</item>
        <item>ENGH</item>
        <item>ENGL</item>
        <item>ENSU</item>
        <item>ENT</item>
        <item>ENVS</item>
        <item>EOL</item>
        <item>EPOL</item>
        <item>EPS</item>
        <item>EPSY</item>
        <item>ESE</item>
        <item>ESL</item>
        <item>EURO</item>
        <item>FAA</item>
        <item>FIN</item>
        <item>FLTE</item>
        <item>FR</item>
        <item>FSHN</item>
        <item>GC</item>
        <item>GCL</item>
        <item>GEOG</item>
        <item>GEOL</item>
        <item>GER</item>
        <item>GLBL</item>
        <item>GMC</item>
        <item>GRK</item>
        <item>GRKM</item>
        <item>GS</item>
        <item>GWS</item>
        <item>HDFS</item>
        <item>HEBR</item>
        <item>HIST</item>
        <item>HNDI</item>
        <item>HORT</item>
        <item>HRD</item>
        <item>HT</item>
        <item>HUM</item>
        <item>IB</item>
        <item>IE</item>
        <item>IHLT</item>
        <item>INFO</item>
        <item>IS</item>
        <item>ITAL</item>
        <item>JAPN</item>
        <item>JOUR</item>
        <item>JS</item>
        <item>KIN</item>
        <item>KOR</item>
        <item>LA</item>
        <item>LAS</item>
        <item>LAST</item>
        <item>LAT</item>
        <item>LAW</item>
        <item>LEAD</item>
        <item>LER</item>
        <item>LING</item>
        <item>LLS</item>
        <item>MACS</item>
        <item>MATH</item>
        <item>MBA</item>
        <item>MCB</item>
        <item>MDIA</item>
        <item>MDVL</item>
        <item>ME</item>
        <item>MFST</item>
        <item>MICR</item>
        <item>MILS</item>
        <item>MIP</item>
        <item>MSE</item>
        <item>MUS</item>
        <item>MUSE</item>
        <item>NEUR</item>
        <item>NPRE</item>
        <item>NRES</item>
        <item>NS</item>
        <item>NUTR</item>
        <item>PATH</item>
        <item>PBIO</item>
        <item>PERS</item>
        <item>PHIL</item>
        <item>PHYS</item>
        <item>PLPA</item>
        <item>POL</item>
        <item>PORT</item>
        <item>PS</item>
        <item>PSM</item>
        <item>PSYC</item>
        <item>REES</item>
        <item>REHB</item>
        <item>REL</item>
        <item>RHET</item>
        <item>RMLG</item>
        <item>RST</item>
        <item>RUSS</item>
        <item>SAME</item>
        <item>SBC</item>
        <item>SCAN</item>
        <item>SE</item>
        <item>SHS</item>
        <item>SLAV</item>
        <item>SLS</item>
        <item>SOC</item>
        <item>SOCW</item>
        <item>SPAN</item>
        <item>SPED</item>
        <item>STAT</item>
        <item>SWAH</item>
        <item>TAM</item>
        <item>TE</item>
        <item>THEA</item>
        <item>TMGT</item>
        <item>TRST</item>
        <item>TSM</item>
        <item>TURK</item>
        <item>UKR</item>
        <item>UP</item>
        <item>VCM</item>
        <item>VM</item>
        <item>WGGP</item>
        <item>WLOF</item>
        <item>WRIT</item>
        <item>YDSH</item>
    </string-array>
    <string name="Course_page_title"><b>Course Name</b></string>
    <string name="GenEd_Type">GenEd Fullfillments</string>
    <string name="Course_Type">Course Description</string>
    <string name="Section_Code">Course Code</string>
    <string name="Credit_Holder">Credit Hours</string>
    <string name="Select_Button">Select Course</string>
    <string name="Select_Section_Button">Select Section</string>
    <string name="Course_page_title_Example"><b>Western Civ Since 1660-ACP</b></string>
    <string name="GenEd_Type_Example">ACP \nCS - WCC \nHUM - HP</string>
    <string name="Course_Type_Example">
Course is identical to HIST 142 except for the additional writing component.

Credit is not given for both HIST 143 and HIST 142. Prerequisite: Completion of campus Composition I General Education requirement.</string>
    <string name="Section_Code_Example">HIST 143</string>
    <string name="Credit_Holder_Example">Credit Hours:\n4</string>
    <string name="Linked_Course_Banner_CRN">CRN</string>
    <string name="Linked_Course_Banner_Instructor">Instructor</string>
    <string name="Linked_Course_Section_Type">Section Type</string>
    <string name="Linked_Course_Section_Code">Section Code</string>
    <string name="Term_Example">Spring 2020</string>
    <string name="Selected_Lecture_Section">Selected Section:</string>
    <string name="Non_Selected_Section">No Lecture Section Currently Selected</string>
    <string name="Section_Code_Holder">Section Code</string>
    <string name="Section_Type">Section Type</string>
    <string name="CRN_Holder">CRN Holder</string>
    <string name="Instructor_Holder">Instructor Holder</string>
    <string name="Meeting_Time_Holder">Meeting Time Holder</string>
    <string name="Linked_List_Banner">Open Sections:</string>
    <string name="Deselect_Button">Deselect</string>
    <string name="Section_Name_Example">HIST 141</string>
    <string name="CRN_Holder_Example">35125</string>
    <string name="Instructor_Holder_Example">Last First</string>
    <string name="Meeting_Time_Holder_Example">03:00PM - 3:50PM \n<b> Foellinger Auditorium</b></string>
</resources>