<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/SectionName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Course_page_title" />

        <TextView
            android:id="@+id/sectionType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Section_Type" />

        <TextView
            android:id="@+id/SectionCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Section_Code_Holder" />

        <TextView
            android:id="@+id/CRNHolder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CRN_Holder" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/InstructorHolder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Instructor_Holder" />

        <TextView
            android:id="@+id/MeetingTimeHolder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Meeting_Time_Holder" />

    </LinearLayout>

    <Button
        android:id="@+id/SelectSection"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/Select_Section_Button" />

    <Button
        android:id="@+id/DeselectSection"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/Deselect_Button" />

</LinearLayout>
