<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/CourseNameHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Course_page_title_Example" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/CreditHourHolder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Credit_Holder_Example" />

        <TextView
            android:id="@+id/CourseCodeHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Section_Code_Example" />

        <TextView
            android:id="@+id/TermHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Term_Example" />
    </LinearLayout>

</LinearLayout>
