<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/CourseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="712dp"
        android:gravity="center"
        android:text="@string/Course_page_title_Example"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CourseCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Section_Code"
        app:layout_constraintBottom_toTopOf="@id/AttributeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/CourseName" />

    <LinearLayout
        android:id="@+id/AttributeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/CourseName">

        <TextView
            android:id="@+id/AttributeHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GenEd_Type_Example" />

        <TextView
            android:id="@+id/CourseDescription"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:scrollbar="vertical"
            android:text="@string/Course_Type_Example" />

        <TextView
            android:id="@+id/CreditHolder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/Credit_Holder_Example" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
